apollo-router/tests/snapshots/apollo_otel_traces__non_defer.snap
---
source: apollo-router/tests/apollo_otel_traces.rs
expression: report
---
resourceSpans:
  - resource:
      attributes:
        - key: apollo.client.host
          value:
            stringValue: "[redacted]"
        - key: apollo.client.uname
          value:
            stringValue: "[redacted]"
        - key: apollo.graph.ref
          value:
            stringValue: test
        - key: apollo.router.id
          value:
            stringValue: "[redacted]"
        - key: apollo.schema.id
          value:
            stringValue: "[redacted]"
        - key: apollo.user.agent
          value:
            stringValue: "[redacted]"
      droppedAttributesCount: 0
    scopeSpans:
      - scope:
          name: apollo-router
          version: "[version]"
          attributes: []
          droppedAttributesCount: 0
        spans:
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: query
            kind: 2
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.request
                value:
                  boolValue: true
              - key: graphql.operation.type
                value:
                  stringValue: query
              - key: http.request.method
                value:
                  stringValue: POST
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: router
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.duration_ns
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.http.request_headers
                value:
                  stringValue: "{}"
              - key: apollo_private.http.response_headers
                value:
                  stringValue: "[redacted]"
              - key: client.name
                value:
                  stringValue: ""
              - key: client.version
                value:
                  stringValue: ""
              - key: http.request.method
                value:
                  stringValue: POST
              - key: http.response.status_code
                value:
                  intValue: 200
              - key: trace_id
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 1
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: parse_query
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: supergraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.graphql.variables
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.operation_signature
                value:
                  stringValue: "# -\n{topProducts{name reviews{author{name}}reviews{author{name}}}}"
              - key: apollo_private.query.aliases
                value:
                  intValue: 0
              - key: apollo_private.query.depth
                value:
                  intValue: 4
              - key: apollo_private.query.height
                value:
                  intValue: 7
              - key: apollo_private.query.root_fields
                value:
                  intValue: 1
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: query_planning
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: execution
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.operation.type
                value:
                  stringValue: query
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: sequence
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: fetch
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: products
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: subgraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: products
              - key: apollo_private.ftv1
                value:
                  stringValue: "[redacted]"
              - key: graphql.operation.name
                value:
                  stringValue: ""
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: subgraph_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: products
              - key: graphql.operation.name
                value:
                  stringValue: ""
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: flatten
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.path
                value:
                  stringValue: /topProducts/@
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: fetch
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: reviews
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: subgraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: reviews
              - key: apollo_private.ftv1
                value:
                  stringValue: "[redacted]"
              - key: graphql.operation.name
                value:
                  stringValue: ""
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: subgraph_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: reviews
              - key: graphql.operation.name
                value:
                  stringValue: ""
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: flatten
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.path
                value:
                  stringValue: /topProducts/@/reviews/@/author
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: fetch
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: accounts
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: subgraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: accounts
              - key: apollo_private.ftv1
                value:
                  stringValue: "[redacted]"
              - key: graphql.operation.name
                value:
                  stringValue: ""
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: subgraph_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: accounts
              - key: graphql.operation.name
                value:
                  stringValue: ""
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 1
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
        schemaUrl: ""
    schemaUrl: ""
